added service section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body class="font-sora">
     <header data-theme="garden">
         <nav class="border-b-2 lg:border-0 border-[#179800] lg:px-36">
-            <div class="navbar bg-base-100">
+            <div class="navbar">
                 <div class="navbar-start">
                     <img class="w-[140px]" src="assets/logo-header.png" alt="">
                 </div>
@@ -54,9 +54,41 @@
                 <img class="w-full lg:w-[1030px] lg:px-36 lg:pt-9 mx-auto" src="assets/hero-vegetables.png" alt="">
         </div>
     </header>
-    
-    <main>
 
+    <main>
+        <!-- Our Services Section -->
+         <section class="mt-12 mb-12 lg:mt-32 lg:mb-32 px-4 lg:px-36">
+            <h3 class="text-2xl lg:text-4xl font-semibold text-[#179800] mb-8 lg:mb-12">Services</h3>
+            <div class="grid lg:grid-cols-3 gap-6">
+                <div class="bg-[#F1EEE7] card flex flex-col items-center pt-10">
+                    <div class="bg-white rounded-full">
+                        <img class="p-6" src="assets/service.png" alt="24/7 Services">
+                    </div>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title">24/7 Services </h2>
+                      <p class="font-light">We understand that fresh vegetables are a daily essential, and your schedule shouldn’t limit your access to healthy, farm-fresh produce. That’s why we’re open 24/7, ensuring you can shop for your favorite vegetables anytime—day or night!</p>
+                    </div>
+                </div>
+                <div class="bg-[#F1EEE7] card flex flex-col items-center pt-10">
+                    <div class="bg-white rounded-full">
+                        <img class="p-6" src="assets/delivery.png" alt="24/7 Services">
+                    </div>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title">Fast Delivery</h2>
+                      <p class="font-light">We know how important fresh vegetables are for your meals. That’s why we offer super-fast delivery, ensuring you get farm-fresh produce quickly and hassle-free! No more waiting—just order, relax, and enjoy fresh vegetables delivered straight to your home!</p>
+                    </div>
+                </div>
+                <div class="bg-[#F1EEE7] card flex flex-col items-center pt-10">
+                    <div class="bg-white rounded-full">
+                        <img class="p-6" src="assets/healthy.png" alt="24/7 Services">
+                    </div>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title">Healthy Products </h2>
+                      <p class="font-light">We believe that good health starts with fresh and natural food. That’s why we offer a wide range of healthy products. We bring you the best quality, ensuring every bite is nutritious and delicious! Shop with us for a better lifestyle!</p>
+                    </div>
+                </div>
+            </div>
+         </section>
     </main>
 
     <footer>
