--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
+    <!-- ADLaM Display Google Font CDN -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&display=swap" rel="stylesheet">
     <!-- DaisyUi CDN -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -17,6 +21,10 @@
     <style>
         .font-sora {
             font-family: "Sora", serif;
+        }
+
+        .font-adlam {
+            font-family: "ADLaM Display", serif;
         }
     </style>
 
@@ -40,7 +48,8 @@
                     <i class="fa-solid fa-magnifying-glass text-xl hidden lg:inline"></i>
                     <i class="fa-solid fa-cart-shopping text-xl hidden lg:inline"></i>
                     <button class="btn border-[#179800] py-2.5 px-7 hidden lg:inline">Login</button>
-                    <button class="btn btn-active bg-[#179800] py-2.5 px-7 text-white hidden lg:inline">Register</button>
+                    <button
+                        class="btn btn-active bg-[#179800] py-2.5 px-7 text-white hidden lg:inline">Register</button>
                     <i class="fa-solid fa-bars md:mx-auto lg:hidden"></i>
                 </div>
             </div>
@@ -48,16 +57,18 @@
 
         <!-- banner section -->
         <div class="text-center" data-theme="garden">
-            <h1 class="pt-12 mb-4 lg:mb-8 lg:pt-20 text-4xl lg:text-6xl font-semibold">Freshness <span class="text-[#179800]">You Can <br>
-                Count</span> On, Prices You’ll Love!</h1>
-                <p class="lg:text-xl">Shop your daily essentials at unbeatable prices. From fresh produce to pantry <br> staples, we’ve got you covered every day!</p>
-                <img class="w-full lg:w-[1030px] lg:px-36 lg:pt-9 mx-auto" src="assets/hero-vegetables.png" alt="">
+            <h1 class="pt-12 mb-4 lg:mb-8 lg:pt-20 text-4xl lg:text-6xl font-semibold">Freshness <span
+                    class="text-[#179800]">You Can <br>
+                    Count</span> On, Prices You’ll Love!</h1>
+            <p class="lg:text-xl">Shop your daily essentials at unbeatable prices. From fresh produce to pantry <br>
+                staples, we’ve got you covered every day!</p>
+            <img class="w-full lg:w-[1030px] lg:px-36 lg:pt-9 mx-auto" src="assets/hero-vegetables.png" alt="">
         </div>
     </header>
 
     <main>
-        <!-- Our Services Section -->
-         <section class="mt-12 mb-12 lg:mt-32 lg:mb-32 px-4 lg:px-36">
+        <!--Services Section -->
+        <section class="mt-12 mb-12 lg:mt-32 lg:mb-32 px-4 lg:px-36">
             <h3 class="text-2xl lg:text-4xl font-semibold text-[#179800] mb-8 lg:mb-12">Services</h3>
             <div class="grid lg:grid-cols-3 gap-6">
                 <div class="bg-[#F1EEE7] card flex flex-col items-center pt-10">
@@ -66,7 +77,9 @@
                     </div>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">24/7 Services </h2>
-                      <p class="font-light">We understand that fresh vegetables are a daily essential, and your schedule shouldn’t limit your access to healthy, farm-fresh produce. That’s why we’re open 24/7, ensuring you can shop for your favorite vegetables anytime—day or night!</p>
+                        <p class="font-light">We understand that fresh vegetables are a daily essential, and your
+                            schedule shouldn’t limit your access to healthy, farm-fresh produce. That’s why we’re open
+                            24/7, ensuring you can shop for your favorite vegetables anytime—day or night!</p>
                     </div>
                 </div>
                 <div class="bg-[#F1EEE7] card flex flex-col items-center pt-10">
@@ -75,7 +88,10 @@
                     </div>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">Fast Delivery</h2>
-                      <p class="font-light">We know how important fresh vegetables are for your meals. That’s why we offer super-fast delivery, ensuring you get farm-fresh produce quickly and hassle-free! No more waiting—just order, relax, and enjoy fresh vegetables delivered straight to your home!</p>
+                        <p class="font-light">We know how important fresh vegetables are for your meals. That’s why we
+                            offer super-fast delivery, ensuring you get farm-fresh produce quickly and hassle-free! No
+                            more waiting—just order, relax, and enjoy fresh vegetables delivered straight to your home!
+                        </p>
                     </div>
                 </div>
                 <div class="bg-[#F1EEE7] card flex flex-col items-center pt-10">
@@ -84,11 +100,113 @@
                     </div>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">Healthy Products </h2>
-                      <p class="font-light">We believe that good health starts with fresh and natural food. That’s why we offer a wide range of healthy products. We bring you the best quality, ensuring every bite is nutritious and delicious! Shop with us for a better lifestyle!</p>
+                        <p class="font-light">We believe that good health starts with fresh and natural food. That’s why
+                            we offer a wide range of healthy products. We bring you the best quality, ensuring every
+                            bite is nutritious and delicious! Shop with us for a better lifestyle!</p>
                     </div>
                 </div>
             </div>
-         </section>
+        </section>
+
+        <!--Popular Products Section  -->
+        <section data-theme="garden">
+            <h3 class="text-2xl lg:text-4xl font-semibold text-[#179800] mb-8 lg:mb-12 pl-4 pt-4 lg:pt-36 lg:pl-36">
+                Popular Products</h3>
+            <div class="flex flex-col gap-6 lg:flex-row px-4 lg:px-36 pb-8 lg:pb-32">
+                <div class="bg-gradient-to-br from-[#53DB3A] to-[#FFFFFF] flex flex-col relative lg:w-1/3 rounded-xl">
+                    <div class="pt-10 px-8 pb-24">
+                        <h4 class="font-adlam text-3xl text-white font-semibold mb-5">30% off</h4>
+                        <p class="mb-1 lg:mb-3">Enjoy 30% OFF on fresh vegetables and healthy products! Don't miss this chance
+                            to stock up on farm-fresh goodness at unbeatable prices.</p>
+                        <button class="btn bg-white px-7 py-2.5 rounded-lg">Buy Now</button>
+                    </div>
+                    <img class="absolute right-1 top-44 lg:top-36 w-44 lg:w-48" src="assets/vegetable-offer.png" alt="">
+                </div>
+                <div class="grid grid-cols-2 lg:grid-cols-3 lg:w-2/3 gap-2 lg:gap-6">
+                    <div class="flex justify-start items-center bg-white rounded-xl p-2 gap-3">
+                        <img class="bg-[#F1EEE7] rounded-lg" src="assets/onion.png" alt="">
+                        <div>
+                            <i class="fa-solid fa-star text-amber-500"></i>
+                            4.5
+                            <h5 class="font-bold">Onion 1 KG</h5>
+                            <p>$39.99</p>
+                        </div>
+                    </div>
+                    <div class="flex justify-start items-center bg-white rounded-xl p-2 gap-3">
+                        <img class="bg-[#F1EEE7] rounded-lg" src="assets/tomato.png" alt="">
+                        <div>
+                            <i class="fa-solid fa-star text-amber-500"></i>
+                            4.5
+                            <h5 class="font-bold">Tomato 500g</h5>
+                            <p>$39.99</p>
+                        </div>
+                    </div>
+                    <div class="flex justify-start items-center bg-white rounded-xl p-2 gap-3">
+                        <img class="bg-[#F1EEE7] rounded-lg" src="assets/potato.png" alt="">
+                        <div>
+                            <i class="fa-solid fa-star text-amber-500"></i>
+                            4.5
+                            <h5 class="font-bold">Potato 1 KG</h5>
+                            <p>$39.99</p>
+                        </div>
+                    </div>
+                    <div class="flex justify-start items-center bg-white rounded-xl p-2 gap-3">
+                        <img class="bg-[#F1EEE7] rounded-lg" src="assets/tomato.png" alt="">
+                        <div>
+                            <i class="fa-solid fa-star text-amber-500"></i>
+                            4.5
+                            <h5 class="font-bold">Tomato 500 g</h5>
+                            <p>$39.99</p>
+                        </div>
+                    </div>
+                    <div class="flex justify-start items-center bg-white rounded-xl p-2 gap-3">
+                        <img class="bg-[#F1EEE7] rounded-lg" src="assets/onion.png" alt="">
+                        <div>
+                            <i class="fa-solid fa-star text-amber-500"></i>
+                            4.5
+                            <h5 class="font-bold">Onion 1 KG</h5>
+                            <p>$39.99</p>
+                        </div>
+                    </div>
+                    <div class="flex justify-start items-center bg-white rounded-xl p-2 gap-3">
+                        <img class="bg-[#F1EEE7] rounded-lg" src="assets/tomato.png" alt="">
+                        <div>
+                            <i class="fa-solid fa-star text-amber-500"></i>
+                            4.5
+                            <h5 class="font-bold">Tomato 500 g</h5>
+                            <p>$39.99</p>
+                        </div>
+                    </div>
+                    <div class="flex justify-start items-center bg-white rounded-xl p-2 gap-3">
+                        <img class="bg-[#F1EEE7] rounded-lg" src="assets/onion.png" alt="">
+                        <div>
+                            <i class="fa-solid fa-star text-amber-500"></i>
+                            4.5
+                            <h5 class="font-bold">Onion 1 KG</h5>
+                            <p>$39.99</p>
+                        </div>
+                    </div>
+                    <div class="flex justify-start items-center bg-white rounded-xl p-2 gap-3">
+                        <img class="bg-[#F1EEE7] rounded-lg" src="assets/potato.png" alt="">
+                        <div>
+                            <i class="fa-solid fa-star text-amber-500"></i>
+                            4.5
+                            <h5 class="font-bold">Potato 1 KG</h5>
+                            <p>$39.99</p>
+                        </div>
+                    </div>
+                    <div class="lg:flex justify-start items-center bg-white rounded-xl p-2 gap-3 hidden lg:inline">
+                        <img class="bg-[#F1EEE7] rounded-lg" src="assets/potato.png" alt="">
+                        <div>
+                            <i class="fa-solid fa-star text-amber-500"></i>
+                            4.5
+                            <h5 class="font-bold">Potato 1 KG</h5>
+                            <p>$39.99</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
