--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
+
     <!-- ADLaM Display Google Font CDN -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&display=swap" rel="stylesheet">
+
+    <!-- Poppins Google Font CDN -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     <!-- DaisyUi CDN -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -25,6 +32,9 @@
 
         .font-adlam {
             font-family: "ADLaM Display", serif;
+        }
+        .font-poppins{
+            font-family: "Poppins", serif;
         }
     </style>
 
@@ -116,7 +126,8 @@
                 <div class="bg-gradient-to-br from-[#53DB3A] to-[#FFFFFF] flex flex-col relative lg:w-1/3 rounded-xl">
                     <div class="pt-10 px-8 pb-24">
                         <h4 class="font-adlam text-3xl text-white font-semibold mb-5">30% off</h4>
-                        <p class="mb-1 lg:mb-3">Enjoy 30% OFF on fresh vegetables and healthy products! Don't miss this chance
+                        <p class="mb-1 lg:mb-3">Enjoy 30% OFF on fresh vegetables and healthy products! Don't miss this
+                            chance
                             to stock up on farm-fresh goodness at unbeatable prices.</p>
                         <button class="btn bg-white px-7 py-2.5 rounded-lg">Buy Now</button>
                     </div>
@@ -204,6 +215,31 @@
                             <p>$39.99</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Arrival & Offers Section -->
+        <section class="mt-12 mb-12 lg:mt-32 lg:mb-32 px-4 lg:px-36">
+            <h3 class="text-2xl lg:text-4xl font-semibold text-[#179800] mb-8 lg:mb-12">
+                Arrival & Offers
+            </h3>
+            <div class="flex flex-col lg:flex-row gap-3 lg:gap-6">
+                <div class="bg-[#115414] flex justify-between items-center rounded-xl lg:rounded-3xl p-4 lg:px-20 lg:py-5 lg:gap-20 lg:w-3/5">
+                    <div class="grid grid-cols-1 gap-2 lg:gap-6">
+                        <img class="w-36 lg:w-auto" src="assets/dawat-logo.png" alt="">
+                        <button class="font-poppins lg:text-2xl text-white bg-[#63B76D] rounded-lg p-3 lg:py-4 lg:px-10">Cook Exotic Dishes</button>
+                        <p class="lg:text-4xl text-white">UP to <span class="font-bold">20% OFF</span></p>
+                    </div>
+                    <img class="w-44 lg:w-auto" src="assets/dawat-mock-up.png" alt="">
+                </div>
+                <div class="bg-[#102861] flex justify-between items-center rounded-xl lg:rounded-3xl p-4 lg:px-12 lg:py-5 lg:gap-20 lg:w-2/5">
+                    <div class="grid grid-cols-1 gap-2 lg:gap-6">
+                        <img class="w-20 lg:w-auto" src="assets/india-gate-logo.png" alt="">
+                        <button class="font-poppins lg:text-2xl text-white bg-[#2A4D97] rounded-lg lg:rounded-xl p-3 lg:py-4 lg:px-10">World’s No.1 Rice</button>
+                        <p class="lg:text-4xl text-white">UP to <span class="font-bold">40% OFF</span></p>
+                    </div>
+                    <img class="pt-4 lg:pt-14 w-24 lg:w-auto" src="assets/india-gate-mock-up.png" alt="">
                 </div>
             </div>
         </section>
