--- a/index.html
+++ b/index.html
@@ -243,6 +243,24 @@
                 </div>
             </div>
         </section>
+
+        <!-- Get Grocery News Section -->
+         <section class="mt-12 mb-12 lg:mt-32 lg:mb-32 px-4 lg:px-36">
+            <div class="text-center lg:text-left lg:flex items-center rounded-2xl lg:rounded-3xl py-8 lg:py-14" data-theme="garden">
+                <img class="w-56 lg:w-auto mx-auto mb-4 lg:mx-52" src="assets/vegetable-busket.png" alt="">
+                <div class="lg:mx-28">
+                    <h2 class="text-2xl lg:text-4xl font-bold lg:font-semibold text-[#179800] lg:text-black mb-4 lg:mb-6">Get Grocery News!</h2>
+                    <p class="mb-4 px-2 lg:mb-6 text-xl">
+                        Exclusive training tips, ticks, product deals and more.
+                    </p>
+                    <input class="mb-4 lg:mb-6 p-5 w-[330px] lg:w-[472px] rounded-lg" type="email" name="" id="" placeholder="Enter Email..">
+                    <br>
+                    <button
+                        class="btn btn-active bg-[#179800] py-2 px-7 text-white">Subscribe
+                    </button>
+                </div>
+            </div>
+         </section>
     </main>
 
     <footer>
