--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 </head>
 
-<body class="font-sora">
+<body class="font-sora relative">
     <header data-theme="garden">
         <nav class="border-b-2 lg:border-0 border-[#179800] lg:px-36">
             <div class="navbar">
@@ -245,7 +245,7 @@
         </section>
 
         <!-- Get Grocery News Section -->
-         <section class="mt-12 mb-12 lg:mt-32 lg:mb-32 px-4 lg:px-36">
+         <section class="mt-12 -mb-72 lg:mt-32 lg:-mb-64 px-4 lg:px-36 relative">
             <div class="text-center lg:text-left lg:flex items-center rounded-2xl lg:rounded-3xl py-8 lg:py-14" data-theme="garden">
                 <img class="w-56 lg:w-auto mx-auto mb-4 lg:mx-52" src="assets/vegetable-busket.png" alt="">
                 <div class="lg:mx-28">
@@ -263,8 +263,25 @@
          </section>
     </main>
 
-    <footer>
-
+    <footer class="bg-[#179800]">
+        <div class="mt-12 lg:mt-10 pt-72 pb-16 lg:pb-36 lg:pt-96 px-4 lg:px-36 lg:flex lg:justify-between">
+            <div class="mt-auto">
+                <img class="mb-4" src="assets/logo-footer.png" alt="">
+                <p class="lg:text-xl text-white">Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
+            </div>
+            <ul class="text-white mt-auto lg:text-xl">
+                <li class="mt-6 mb-6"><a href="">Products</a></li>
+                <li class="mb-6"><a href="">Services</a></li>
+                <li class="lg:mb-0 mb-16"><a href="">Contact Us</a></li>
+            </ul>
+            <div class="mt-auto">
+                <p class="text-white text-xl mb-2">Follow Us</p>
+                <i class="fa-brands text-white text-xl fa-facebook mr-7"></i>
+                <i class="fa-brands text-white text-xl fa-instagram mr-7"></i>
+                <i class="fa-brands text-white text-xl fa-linkedin mr-7"></i>
+                <i class="fa-brands text-white text-xl fa-youtube mr-7"></i>
+            </div>
+        </div>
     </footer>
 </body>
 
