--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
         .font-poppins{
             font-family: "Poppins", serif;
         }
+        @keyframes zooming {
+            from    {
+                transform: scale(0.5);
+                opacity: 0;
+            }
+            to{
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+        header .text-center{
+            animation: zooming 2s ease-in-out;
+        }
+        
     </style>
 
 </head>
@@ -60,7 +74,7 @@
                     <button class="btn border-[#179800] py-2.5 px-7 hidden lg:inline">Login</button>
                     <button
                         class="btn btn-active bg-[#179800] py-2.5 px-7 text-white hidden lg:inline">Register</button>
-                    <i class="fa-solid fa-bars md:mx-auto lg:hidden"></i>
+                    <i class="fa-solid fa-bars mr-5 text-3xl lg:hidden"></i>
                 </div>
             </div>
         </nav>
@@ -253,7 +267,7 @@
                     <p class="mb-4 px-2 lg:mb-6 text-xl">
                         Exclusive training tips, ticks, product deals and more.
                     </p>
-                    <input class="mb-4 lg:mb-6 p-5 w-[330px] lg:w-[472px] rounded-lg" type="email" name="" id="" placeholder="Enter Email..">
+                    <input class="mb-4 lg:mb-6 p-5 w-96 lg:w-[472px] rounded-lg" type="email" name="" id="" placeholder="Enter Email..">
                     <br>
                     <button
                         class="btn btn-active bg-[#179800] py-2 px-7 text-white">Subscribe
@@ -265,7 +279,7 @@
 
     <footer class="bg-[#179800]">
         <div class="mt-12 lg:mt-10 pt-72 pb-16 lg:pb-36 lg:pt-96 px-4 lg:px-36 lg:flex lg:justify-between">
-            <div class="mt-auto">
+            <div class="mt-auto w-full lg:w-96">
                 <img class="mb-4" src="assets/logo-footer.png" alt="">
                 <p class="lg:text-xl text-white">Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
             </div>
