--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <!-- Poppins Google Font CDN -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 
     <!-- DaisyUi CDN -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -33,23 +35,29 @@
         .font-adlam {
             font-family: "ADLaM Display", serif;
         }
-        .font-poppins{
+
+        .font-poppins {
             font-family: "Poppins", serif;
         }
+
         @keyframes zooming {
-            from    {
+            from {
                 transform: scale(0.5);
                 opacity: 0;
             }
-            to{
+
+            to {
                 transform: scale(1);
                 opacity: 1;
             }
         }
-        header .text-center{
-            animation: zooming 2s ease-in-out;
+
+        header h1 {
+            animation: zooming 0.5s ease-in-out;
         }
-        
+        header p {
+            animation: zooming 1.5s ease-in-out;
+        }
     </style>
 
 </head>
@@ -86,7 +94,7 @@
                     Count</span> On, Prices You’ll Love!</h1>
             <p class="lg:text-xl">Shop your daily essentials at unbeatable prices. From fresh produce to pantry <br>
                 staples, we’ve got you covered every day!</p>
-            <img class="w-full lg:w-[1030px] lg:px-36 lg:pt-9 mx-auto" src="assets/hero-vegetables.png" alt="">
+            <img class="w-auto lg:px-36 lg:pt-9 mx-auto" src="assets/hero-vegetables.png" alt="">
         </div>
     </header>
 
@@ -239,18 +247,24 @@
                 Arrival & Offers
             </h3>
             <div class="flex flex-col lg:flex-row gap-3 lg:gap-6">
-                <div class="bg-[#115414] flex justify-between items-center rounded-xl lg:rounded-3xl p-4 lg:px-20 lg:py-5 lg:gap-20 lg:w-3/5">
+                <div
+                    class="bg-[#115414] flex justify-between items-center rounded-xl lg:rounded-3xl p-4 lg:px-20 lg:py-5 lg:gap-20 lg:w-3/5">
                     <div class="grid grid-cols-1 gap-2 lg:gap-6">
                         <img class="w-36 lg:w-auto" src="assets/dawat-logo.png" alt="">
-                        <button class="font-poppins lg:text-2xl text-white bg-[#63B76D] rounded-lg p-3 lg:py-4 lg:px-10">Cook Exotic Dishes</button>
+                        <button
+                            class="font-poppins lg:text-2xl text-white bg-[#63B76D] rounded-lg p-3 lg:py-4 lg:px-10">Cook
+                            Exotic Dishes</button>
                         <p class="lg:text-4xl text-white">UP to <span class="font-bold">20% OFF</span></p>
                     </div>
                     <img class="w-44 lg:w-auto" src="assets/dawat-mock-up.png" alt="">
                 </div>
-                <div class="bg-[#102861] flex justify-between items-center rounded-xl lg:rounded-3xl p-4 lg:px-12 lg:py-5 lg:gap-20 lg:w-2/5">
+                <div
+                    class="bg-[#102861] flex justify-between items-center rounded-xl lg:rounded-3xl p-4 lg:px-12 lg:py-5 lg:gap-20 lg:w-2/5">
                     <div class="grid grid-cols-1 gap-2 lg:gap-6">
                         <img class="w-20 lg:w-auto" src="assets/india-gate-logo.png" alt="">
-                        <button class="font-poppins lg:text-2xl text-white bg-[#2A4D97] rounded-lg lg:rounded-xl p-3 lg:py-4 lg:px-10">World’s No.1 Rice</button>
+                        <button
+                            class="font-poppins lg:text-2xl text-white bg-[#2A4D97] rounded-lg lg:rounded-xl p-3 lg:py-4 lg:px-10">World’s
+                            No.1 Rice</button>
                         <p class="lg:text-4xl text-white">UP to <span class="font-bold">40% OFF</span></p>
                     </div>
                     <img class="pt-4 lg:pt-14 w-24 lg:w-auto" src="assets/india-gate-mock-up.png" alt="">
@@ -258,30 +272,86 @@
             </div>
         </section>
 
+        <!-- Clients Review Section -->
+        <section class="font-sora" data-theme="lemonade">
+            <h3 class="text-2xl lg:text-4xl font-semibold text-[#179800] mb-8 lg:mb-12 pl-4 pt-4 lg:pt-36 lg:pl-36">
+                Our Clients' Review
+            </h3>
+            <div class="grid grid-cols-1 lg:grid-cols-4 gap-2 lg:gap-6 px-4 lg:px-36">
+                <div class="bg-[#179800] rounded-lg flex  items-center gap-1 lg:gap-3 w-96 lg:w-full">
+                    <img class="w-24 lg:w-32 rounded-l-lg" src="clients photo/1.jpeg" alt="">
+                    <div class="text-white mx-2">
+                        <p class="text-sm lg:text-base mb-4">Absolutely amazing service! The team was professional,
+                            efficient, and exceeded my expectations. Highly recommend!</p>
+                        <h5 class="font-bold lg:text-2xl">
+                            Loreo Ilham
+                        </h5>
+                    </div>
+                </div>
+
+                <div class="bg-[#179800] rounded-lg flex  items-center gap-1 lg:gap-3 w-96 lg:w-full">
+                    <img class="w-24 lg:w-32 rounded-l-lg" src="clients photo/2.jpg" alt="">
+                    <div class="text-white mx-2">
+                        <p class="text-sm lg:text-base mb-4">Fast, reliable, and worth every penny! I’ll definitely be coming back for more. Highly recommended!</p>
+                        <h5 class="font-bold lg:text-2xl">
+                            Olivia W.
+                        </h5>
+                    </div>
+                </div>
+
+                <div class="bg-[#179800] rounded-lg lg:flex  items-center gap-1 lg:gap-3 w-96 lg:w-full hidden">
+                    <img class="w-24 lg:w-32 rounded-l-lg" src="clients photo/3.jpg" alt="">
+                    <div class="text-white mx-2">
+                        <p class="text-sm lg:text-base mb-4">From start to finish, the experience was seamless. Customer support was responsive, and the quality of work was top-notch!</p>
+                        <h5 class="font-bold lg:text-2xl">
+                            James T.
+                        </h5>
+                    </div>
+                </div>
+
+                <div class="bg-[#179800] rounded-lg lg:flex  items-center gap-1 lg:gap-3 w-96 lg:w-full hidden">
+                    <img class="w-24 lg:w-32 rounded-l-lg" src="clients photo/1.jpeg" alt="">
+                    <div class="text-white mx-2">
+                        <p class="text-sm lg:text-base mb-4">he team was incredibly friendly and professional. They listened to my needs and delivered beyond expectations!</p>
+                        <h5 class="font-bold lg:text-2xl">
+                            Michael D.
+                        </h5>
+                    </div>
+                </div>
+            </div>
+            <div class="px-4 lg:px-36 lg:pb-36 mt-4 flex lg:justify-end pb-4">
+                <button class="btn btn-active bg-[#179800] py-2 px-7 text-white">Show All</button>
+            </div>
+        </section>
+
         <!-- Get Grocery News Section -->
-         <section class="mt-12 -mb-72 lg:mt-32 lg:-mb-64 px-4 lg:px-36 relative">
-            <div class="text-center lg:text-left lg:flex items-center rounded-2xl lg:rounded-3xl py-8 lg:py-14" data-theme="garden">
+        <section class="mt-12 -mb-72 lg:mt-32 lg:-mb-64 px-4 lg:px-36 relative">
+            <div class="text-center lg:text-left flex flex-col lg:flex-row justify-between items-center rounded-2xl lg:rounded-3xl py-8 lg:py-14"
+                data-theme="garden">
                 <img class="w-56 lg:w-auto mx-auto mb-4 lg:mx-52" src="assets/vegetable-busket.png" alt="">
                 <div class="lg:mx-28">
-                    <h2 class="text-2xl lg:text-4xl font-bold lg:font-semibold text-[#179800] lg:text-black mb-4 lg:mb-6">Get Grocery News!</h2>
+                    <h2
+                        class="text-2xl lg:text-4xl font-bold lg:font-semibold text-[#179800] lg:text-black mb-4 lg:mb-6">
+                        Get Grocery News!</h2>
                     <p class="mb-4 px-2 lg:mb-6 text-xl">
                         Exclusive training tips, ticks, product deals and more.
                     </p>
-                    <input class="mb-4 lg:mb-6 p-5 w-96 lg:w-[472px] rounded-lg" type="email" name="" id="" placeholder="Enter Email..">
+                    <input class="mb-4 lg:mb-6 p-5 w-80 lg:w-[472px] rounded-lg" type="email" name="" id=""
+                        placeholder="Enter Email..">
                     <br>
-                    <button
-                        class="btn btn-active bg-[#179800] py-2 px-7 text-white">Subscribe
+                    <button class="btn btn-active bg-[#179800] py-2 px-7 text-white">Subscribe
                     </button>
                 </div>
             </div>
-         </section>
+        </section>
     </main>
 
     <footer class="bg-[#179800]">
         <div class="mt-12 lg:mt-10 pt-72 pb-16 lg:pb-36 lg:pt-96 px-4 lg:px-36 lg:flex lg:justify-between">
             <div class="mt-auto w-full lg:w-96">
                 <img class="mb-4" src="assets/logo-footer.png" alt="">
-                <p class="lg:text-xl text-white">Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
+                <p class="lg:text-xl text-white">Discover a world of treats, toys, and essentials handpicked for your
+                    furry friends</p>
             </div>
             <ul class="text-white mt-auto lg:text-xl">
                 <li class="mt-6 mb-6"><a href="">Products</a></li>
