--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 <div class="bg-[#179800] rounded-lg lg:flex  items-center gap-1 lg:gap-3 w-96 lg:w-full hidden">
                     <img class="w-24 lg:w-32 rounded-l-lg" src="clients photo/1.jpeg" alt="">
                     <div class="text-white mx-2">
-                        <p class="text-sm lg:text-base mb-4">he team was incredibly friendly and professional. They listened to my needs and delivered beyond expectations!</p>
+                        <p class="text-sm lg:text-base mb-4">The team was incredibly friendly and professional. They listened to my needs and delivered beyond expectations!</p>
                         <h5 class="font-bold lg:text-2xl">
                             Michael D.
                         </h5>
